# task-queue-rs

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  config.example.yaml  docker-compose.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/queue/: memory.rs  mod.rs
src/storage/: backend.rs  mod.rs
src/task/: executor.rs  mod.rs
src/worker/: mod.rs  pool.rs
tests/: cancellation_test.rs  concurrent_dequeue_test.rs  config_file_test.rs  config_test.rs  error_test.rs  executor_test.rs  integration_test.rs  memory_leak_fix_test.rs  memory_queue_test.rs  peek_inconsistency_test.rs  priority_test.rs  queue_test.rs  scheduling_test.rs  shutdown_test.rs  storage_test.rs  task_test.rs  update_bug_test.rs  worker_pool_test.rs
